--- a/backend/package.json
+++ b/backend/package.json
@@ -19,11 +19,10 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
-    "fast-two-sms": "^3.0.0",
     "generate-password": "^1.7.1",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "multer": "^2.0.1",
+    "morgan": "^1.10.1",
+    "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.1",
     "node-cron": "^4.1.1",
